changed performers view
